# waste-tui

./: .gitignore  DEVELOPMENT.md  README.md  asyncdns.cpp  blowfish.c  blowfish.h  connection.cpp  filedb.cpp  filedb.h  listen.cpp  mqueuelist.cpp  netkern.cpp  platform.h  sockets.h  srvmain.cpp  tui_design_and_planning.txt  util.cpp  xfers.cpp  xfers.h
rsa/: global.h  md5c.c
tui/: CMakeLists.txt  app.cpp  app.h  main.cpp  state.cpp  state.h  theme.cpp  theme.h
tui/components/: modal.cpp  modal.h  scrolltext.cpp  scrolltext.h  table.cpp  table.h
tui/core/: waste_core.cpp  waste_core.h
tui/views/: browse.cpp  browse.h  chat.cpp  chat.h  network.cpp  network.h  search.cpp  search.h  settings.cpp  settings.h  transfers.cpp  transfers.h
